[package]
name = "orchbus"
version = "0.1.0"
edition = "2021"
description = "tmux cockpit for triaging/approving Claude Code sessions across panes"

[[bin]]
name = "orchbus"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"

[profile.release]
opt-level = 2
strip = true
